--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.8.6",
+    "react-loader-spinner": "^2.3.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
